kubernetes/main/apps/renovate/renovate-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-operator
spec:
  hostnames:
    - renovate.zinn.ca
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: renovate-operator
          namespace: renovate
          port: 8081
